--- a/RedisExchangeAPI.Web/appsettings.json
+++ b/RedisExchangeAPI.Web/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "Redis": {
+    "Host": "localhost",
+    "Port": 6379
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
